--- a/VueFolder/enjoy-project/css/style.css
+++ b/VueFolder/enjoy-project/css/style.css
@@ -61,7 +61,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   padding-bottom: 12px;
   padding-left: 30px;
   padding-right: 30px;
-  border-radius: 30px;
+  border-radius: 10px;
+  margin-left: 3px;
   font-size: 14px; }
   .btn:active, .btn:focus {
     outline: none;
